more spacing fixes

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -9,7 +9,7 @@ body {
 #wrapper{
 	background-color: #C0B3A0;
 	margin: 95px auto 0 auto;
-	padding: 5px 5px 27% 25px;
+	padding: 5px 35px 27% 25px;
 	width: 80%;
 }
 #header{
